force-app/main/default/objects/Leave_Quota__mdt/Leave_Quota__mdt.object-meta.xml
<CustomObject>
    <label>Leave Quota</label>
    <pluralLabel>Leave Quotas</pluralLabel>
</CustomObject>