force-app/main/default/objects/Leave_Quota__mdt/fields/Annual_Leaves__c.field-meta.xml
<CustomField>
    <fullName>Annual_Leaves__c</fullName>
    <label>Annual Leaves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>