force-app/main/default/objects/Leave_Quota__mdt/fields/Sick_Leaves__c.field-meta.xml
<CustomField>
    <fullName>Sick_Leaves__c</fullName>
    <label>Sick Leaves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>