force-app/main/default/objects/Leave_Quota__mdt/fields/Work_From_Home_s__c.field-meta.xml
<CustomField>
    <fullName>Work_From_Home_s__c</fullName>
    <label>Work From Home&apos;s</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>